--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,7 @@
     <string name="pref_units_key">temp_units</string>
     <string name="pref_units_metric">metric</string>
     <string name="pref_units_imperial">imperial</string>
+
+    <!-- api key for OpenWeatherMap -->
+    <string name="api_key">e3474b153f1ce91fa030d3a275248f0f</string>
 </resources>
