--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,15 @@
     <string name="action_refresh" translatable="false">Refresh</string>
     <string name="action_view_location">View Location</string>
     <string name="action_share">Share</string>
-    <string name="title_activity_detail">DetailActivity</string>
-    <string name="title_activity_settings">SettingsActivity</string>
+    <string name="title_activity_detail">Details</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="delete_message">Delete location?</string>
+    <string name="delete">Delete</string>
+    <string name="cancel">Cancel</string>
+    <string name="cannot_delete_last_message">Cannot delete only location</string>
+    <string name="drawer_open">Location drawer open</string>
+    <string name="drawer_close">Location drawer close</string>
+    <string name="add_new_location">Location</string>
 
     <!-- strings for location preference -->
     <!-- label for location preference [CHAR LIMIT = 30] -->
